Full RGB eye color added
Added full customization on eye color in RGB format for all expressions.

--- a/public/char.html
+++ b/public/char.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>Tamashi no Tsunagari: Character</title>
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>	<!-- AngularJS -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>		<!-- SocketIO -->
-		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>		<!-- JQuery -->
-		<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>	<!-- CreateJS -->
-		<script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>		<!-- TweenJS -->
+		<script src="./js/angular.min.js"></script>	<!-- AngularJS -->
+		<script src="./js/socket.io.js"></script>		<!-- SocketIO -->
+		<script src="./js/jquery-1.11.1.js"></script>		<!-- JQuery -->
+		<script src="./js/createjs-2015.11.26.min.js"></script>	<!-- CreateJS -->
+		<script src="./js/tweenjs-0.6.2.min.js"></script>		<!-- TweenJS -->
 		<script src="./js/app.js"></script>
 		<script src="./js/char.js"></script>
 	</head>
